# databy-ai-backend

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  README.md  conftest.py  justfile  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
app/: __init__.py  cli.py  main.py
app/agent/: main.py
app/agent/_config/: dev_genai.yaml  genai.yaml  mcp_server_config.json  prod_genai.yaml  prompt_awsand.yaml  prompt_skeleton.yaml
app/agent/actions/: base.py  missing_tools.py  sandbox.py  statistical_methods.py
app/agent/core/: __init__.py  _db.py  _defaults.py  _skeleton.py  _utils.py  cognitive.py  heartbeat.py  inference.py  outbound.py  pipeline.py
app/agent/memory/: gatekeeper.py  loader.py  main.py  manager.py
app/agent/memory/gatekeeper/bigquery/: main.py  utils.py
app/agent/memory/prior_knowledge/: data_types.csv  markdown_profiler.txt
app/agent/outbounds/: lightning.py
app/agent/outbounds/aws/: inference.py  main.py  setup.py  utils.py
app/agent/outbounds/aws/scripts/: cleanup_sagemaker_resources.sh  on_start.sh  on_stop.sh  setup_bedrock_agent_with_code.sh  setup_bedrock_agentcore.sh  setup_bedrock_agents.sh  setup_ecr_image.sh  setup_sagemaker_domain.sh  (+2 more)
app/agent/outbounds/bigquery/: main.py  queries.py
app/agent/pipelines/: data_cleaning_missing.py  data_explorer.py  data_wrangler.py  records.py
app/api/: auth.py  dashboard.py  datasource.py  mongodb.py  socket.py  window.py
app/api/utils/: connection.py  manager.py  schemas.py
app/config/: aws.yaml  cli.yaml
app/static/: index.html
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: index.html
app/utils/: logger.py  settings.py  utils.py
tests/: __init__.py  test_main.py  test_schemas.py
tests/agent/: test_main.py
tests/agent/outbounds/: test_aws_setup.py
tests/agent/pipelines/: data_explorer.py  test_data_explorer.py
tests/api/: test_socket.py
